Widget Draughts Raspberry Pi deb package
[feat]: Raspbian deb 32-bit deb package added
[doc]: README.md updated with install instructions

--- a/AUTHORS
+++ b/AUTHORS
@@ -4,5 +4,5 @@ Upstream Authors:
 Copyright:
     Copyright (c) 2020 Alan Crispin
 
-License: LGPL-2.1+
+License: Apache License Version 2.0
 The full text of the licenses can be found in the 'LICENSE' file.
